tests/build/widget_new/missing_required.stderr
error: missing required property `foo`
  --> $DIR/missing_required.rs:9:1
   |
9  |   #[widget($crate::test_widget)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
18 |       let _ = test_widget! {
   |  _____________-
19 | |         // foo = true;
20 | |     };
   | |_____- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
